add api student & status list
